# sca-backend

./: .env.dev  README.md  docker-compose.dev.yaml  makefile  pyproject.toml
.github/workflows/: ci.yaml
migrations/: env.py
migrations/versions/: 20f3e8dc9823_initial.py
src/: main.py
src/api/v1/: cats.py  missions.py  router.py
src/core/: config.py  exceptions.py  ioc.py
src/dto/: __init__.py  base.py  cats.py  missions.py
src/entity/: __init__.py  base.py  cat.py  mission.py  target.py
src/gateways/: contracts.py  exceptions.py
src/gateways/cats_api/: client.py
src/gateways/sqlalchemy/: __init__.py  main.py
src/gateways/sqlalchemy/repositories/: __init__.py  base.py  cats.py  missions.py
src/services/: cats.py  contracts.py  exceptions.py  missions.py
src/tests/services/: test_cats_service.py  test_missions_service.py
